button left align fix while in container.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -69,7 +69,7 @@ header h2 {
 */s
 
 .buttons {
-margin-left: 5%;	
+margin-left: 10px;	
 }
 
 .btn {
